# robolabel

./: .gitattributes  .gitignore  CHANGELOG.md  CLAIMS.md  CONFIG.md  FRESH_TRIAL_REPORT.md  LICENSE  MIGRATION_MAP.md  OUTREACH.md  PORTING.md  PRICE_EFFICIENCY.md  README.md  RELEASE_READINESS.md  REVIEW_GUIDE.md  ROADMAP.md  RUN_SUMMARY.md  SCHEMA.md  STRATEGY_REPORT.md  probe_metrics.json  pyproject.toml
.github/workflows/: ci.yml
configs/: run_contact_refine.yaml  run_full.yaml  run_min.yaml  s2open_contact_refine.json
demo/: demo.py  fold.json  pickplace.json  pour.json
docs/: TECHNICAL_OVERVIEW.md  blog_post.md  consumability.md  launch_checklist.md  lerobot_walkthrough.md  strategy_report_writeup_todo.md  why.md
eval/: so101_split.json
scripts/: annotate_one.py  backfill_ep1.py  build_inspect_data.py  compute_metrics.py  consumability_check.py  discover_datasets.py  eval_snap.py  eval_strategies.py  make_gallery.py  make_gif.py  make_readme_figures.py  make_split.py  probe_loadtest.py  probe_metrics.py  probe_spotcheck.py  run_ablation.py  run_probe.py  score_gripper.py  spotcheck_frames.py
src/labelkit/: __init__.py  annotate.py  cli.py  cost.py  demo.py  episode.py  gate.py  gold.py  reliability.py  review_app.py  rubric.py  rubric.yaml  schema.py
src/robolabel/: __init__.py  annotate.py  cli.py  control.py  corpus.py  cost.py  curation.py  demo.py  detect.py  episode.py  export_lerobot.py  gate.py  gold.py  inspect_data.py  inspect_server.py  metrics.py  novelty.py  query.py  retrieve.py  review_server.py  rubric.py  run.py  (+6 more)
tests/: test_adapters.py  test_calibration.py  test_control.py  test_demo.py  test_export_lerobot.py  test_gate_rubric.py  test_gripper_baseline.py  test_inspect.py  test_labelers_schema.py  test_metrics.py  test_modules.py  test_providers.py  test_query.py  test_resilience.py  test_retrieve.py  test_review_app.py  test_review_server.py  test_run.py  test_run_ablation.py  test_snap.py  test_strategy.py  test_trial_report.py
(+47 files in other folders)
