[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labelkit"
version = "0.1.0"
description = "Generate pi0.7-style conditioning annotations for LeRobot datasets with any VLM, plus a human calibration loop and measured reliability."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Kevin" }]
keywords = ["lerobot", "robotics", "vlm", "annotation", "labeling", "vla", "calibration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
# Read LeRobot datasets (HF hub id or local path). Pinned; see README "Compatibility".
lerobot = ["lerobot>=0.1.0"]
# Streamlit calibration GUI (`labelkit review`).
review = ["streamlit>=1.30"]
# Local Qwen2.5-VL provider (heavy; GPU recommended).
qwen = ["torch>=2.1", "transformers>=4.45", "accelerate>=0.30", "qwen-vl-utils>=0.0.8"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
labelkit = "labelkit.cli:main"

[project.urls]
Homepage = "https://github.com/kevdozer1/labelkit"
"Technical report (does this help training?)" = "https://github.com/kevdozer1/labelkit/blob/main/docs/why.md"

[tool.hatch.build.targets.wheel]
packages = ["src/labelkit"]

[tool.hatch.build.targets.sdist]
include = ["src/labelkit", "README.md", "LICENSE", "SCHEMA.md"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
